--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -46,14 +46,23 @@
     border: 0;
     padding: 20px 40px;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     border-radius: 30px;
     margin-right: 50px ;
 }
 
 .hero_buttons .explore_us{
     color:#041D60;
+    background-color: transparent;
     font-size: 25px;
-    font-weight: 600;
-    border: 0;
+    padding: 20px 40px;
+    font-weight: 500;
+    border: 2px transparent;
+    border-radius: 30px;
+    
+}
+.hero_buttons .explore_us:hover{
+    border: 2px solid black;
+    border-radius: 30px;
+    transition: all 0.25s;
 }
