home responsive update

--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -10,6 +10,12 @@ h5{
     margin-left:40px ;
     padding-bottom: 30px;
 }
+
+.about_title{
+    color:#F27A0A;
+}
+
+
 .ourmission p{
     width: 917.11px;
     height: 220px;
