--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -1,10 +1,12 @@
 .hero_section{
-    height: 900px;
+    height: auto;
 }
 
 .row{
     height: 100%
 }
+
+
 
 .hero_content{
     padding-left: 120px;
@@ -29,13 +31,13 @@
 
 .image_section{
     width: 100%;
-    margin-top: 20px;
+    margin: 20px;
     text-align: center;
 }
 
 .image_section .main_image {
     width: 100%;
-    height: 900px;
+    height: auto;
     object-fit: contain;
 }
 
@@ -58,11 +60,53 @@
     padding: 20px 40px;
     font-weight: 500;
     border: 2px transparent;
-    border-radius: 30px;
-    
+    border-radius: 30px 
 }
+
+
 .hero_buttons .explore_us:hover{
     border: 2px solid black;
     border-radius: 30px;
     transition: all 0.25s;
+}
+
+@media (max-width: 768px) {
+    .hero_content{
+        margin: 50px 10px;
+        padding-left: 30px !important;
+    }
+
+    .hero_content h1{
+        font-size: 40px !important;
+        margin-bottom: 30px;
+        color: #F27A0A;
+        font-weight: 700;
+    }
+
+    .hero_content h4{
+        font-size: 24px !important;
+        font-weight:500;
+        color: #041D60;
+    }
+
+    .hero_buttons .book_button {
+        background-color: #F27A0A;
+        color: #041D60;
+        border: 0;
+        padding: 10px 20px  !important;
+        font-size: 14px !important;
+        font-weight: 500;
+        border-radius: 30px;
+        margin: 0 !important;
+    }
+
+    .hero_buttons .explore_us{
+        color:#041D60;
+        background-color: transparent;
+        font-size:18px;
+        padding: 10px 20px  !important;
+        font-weight: 500;
+        border: 2px transparent;
+        border-radius: 30px 
+    }
 }
