--- a/src/pages/OurProgram/OurProgram.css
+++ b/src/pages/OurProgram/OurProgram.css
@@ -31,3 +31,34 @@
     width: 70%;
     justify-content: space-between;
 }
+.sub_Card{
+    width: 300px;
+    height: 370px;
+    box-shadow: 0px 0px 35px 9px rgba(0, 0, 0, 0.5);
+    
+}
+.sub_Card h4{
+    font-size: 32px;
+    color: #041D60;
+}
+.sub_Card a{
+    background-color: #041D60;
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
+    width: 150px;
+    margin-top: 15px;
+    font-weight: bold;
+}
+.sub_Card a:hover{
+    background-color: #ffffff;
+    color: #041D60;
+    border: 2px solid #041D60;
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 10px;
+    width: 150px;
+    margin-top: 15px;
+    text-decoration: none;
+    transition: all 0.5s;
+}
