--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -26,7 +26,7 @@
 }
 
 .hero_buttons{
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 .image_section{
@@ -46,27 +46,27 @@
     background-color: #F27A0A;
     color: #041D60;
     border: 0;
-    padding: 20px 40px;
+    padding: 10px 20px;
     font-size: 20px;
-    font-weight: 500;
-    border-radius: 30px;
-    margin-right: 50px ;
+    font-weight: 400;
+    border-radius: 20px;
+    margin-right: 40px ;
 }
 
 .hero_buttons .explore_us{
     color:#041D60;
     background-color: transparent;
     font-size: 25px;
-    padding: 20px 40px;
-    font-weight: 500;
+    padding: 1px 20px;
+    font-weight: 400;
     border: 2px transparent;
-    border-radius: 30px 
+    border-radius: 20px 
 }
 
 
 .hero_buttons .explore_us:hover{
-    border: 2px solid black;
-    border-radius: 30px;
+    border: 1px solid #041D60;
+    border-radius: 20px;
     transition: all 0.25s;
 }
 
