--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -1,7 +1,7 @@
-.about{
+/* .about{
     margin-top: 180px;
     margin-left: 80px;
-}
+} */
 h5{
     font-size: 48px;
     margin-bottom: 30px;
@@ -13,6 +13,7 @@ h5{
 
 .about_title{
     color:#F27A0A;
+    padding: 30px 0px 0px 30px;
 }
 
 
@@ -63,4 +64,13 @@ h3{
     display: flex;
     justify-content: space-evenly;
     padding-bottom: 50px;
+}
+
+@media (max-width: 768px) {
+    .about {
+        padding: 20px;
+    }
+    .about_title{
+        font-size: 32px;
+    }
 }
