--- a/src/pages/AboutUs/components/Card/Card.css
+++ b/src/pages/AboutUs/components/Card/Card.css
@@ -1,4 +1,4 @@
-.card-body {
+.about_us_card .card-body {
     width: 100%;
     height: 400px;
     display: flex;
@@ -7,7 +7,7 @@
     align-items: center;
 }
 
-.card {
+.about_us_card {
     width: 80%;
     max-width: 500px;
     padding: 30px;
@@ -26,4 +26,29 @@
     font-size: 24px;
     font-weight: 500;
     color: #041D60
+}
+
+@media (max-width: 768px) {
+
+    .about_us_card .card-body {
+        width: 100%;
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card_content h3 {
+        font-size: 24px;
+        font-weight: 700;
+        color: #F27A0A;
+        margin-bottom: 0;
+    }
+
+    .card_paragraph h6{
+        font-size: 18px;
+        font-weight: 500;
+        color: #041D60
+    }
 }
