--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -1,3 +1,5 @@
+
+
 .title_tag{
     width: 100%;
 }
@@ -24,10 +26,44 @@
     height: 400px;
     object-fit: contain;
 }
+.tab_container{
+    padding: 40px
+}
+
+
+.content{
+    width: 100%;
+    text-wrap: pretty;
+}
 
 .tab_contents h3{
     text-align: start !important;
-    line-height: 60px;
-    font-weight: 400;
+    line-height: 50px;
+    font-weight: 450;
+    font-size: 32px;
     color:#041D60
+}
+
+@media (max-width: 768px) {
+    .tab_contents{
+        padding: 30px;
+    }
+    
+    .tab_img{
+        width: 90%;
+        height: 200px;
+        object-fit: contain;
+    }
+    
+    .tab_contents h3{
+        text-align: start !important;
+        line-height: 35px;
+        font-weight: 400;
+        font-size: 24px;
+        color:#041D60
+    }
+
+    .tab_container{
+        padding: 10px
+    }
 }
