--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -63,12 +63,12 @@
     border-radius: 30px 
 }
 
-
+/* 
 .hero_buttons .explore_us:hover{
     border: 2px solid black;
     border-radius: 30px;
     transition: all 0.25s;
-}
+} */
 
 @media (max-width: 768px) {
     .hero_content{
