--- a/src/pages/OurProgram/OurProgram.css
+++ b/src/pages/OurProgram/OurProgram.css
@@ -84,3 +84,23 @@
         font-size: 32px;
     }
 }
+.c1 {
+    color: #041D60;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
+.testimonials_container{
+    width: 990px;
+    height: 300px;
+    border-radius: 18px;
+    box-shadow: 0px 0px 30px 4px rgba(0, 0, 0, 0.50);
+    margin-left: 18%;
+    color: #041D60;
+}
+.testimonials_container p{
+    margin-left: 20px;
+    margin-top: 20px;
+    font-weight: bold;
+    align-self: center;
+}
