--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -17,9 +17,11 @@
 
 
 .form_button{
-    padding: 15px 50px;
+    padding: 20px 60px;
     border: 0;
     border-radius: 10px;
     background-color: #041D60;
-    color: white
+    color: white;
+    margin-top: 30px;
+    font-size: 20px;
 }
