--- a/src/pages/Contact/components/Accordion/Accordion.css
+++ b/src/pages/Contact/components/Accordion/Accordion.css
@@ -3,6 +3,13 @@
     border: 0;
     color:#041D60;
     font-weight: 500;
+    height: 100px;
+    font-size: 24px;
+    padding: 0 20px;
+}
+
+.accordion-body{
+  font-size: 20px;
 }
 
 .button_text{
