--- a/src/pages/Contact/components/Input/Input.css
+++ b/src/pages/Contact/components/Input/Input.css
@@ -1,6 +1,7 @@
 .label {
     margin-bottom: 10px;
     font-weight:500;
+    font-size: 24px;
 }
 
 .label_second{
@@ -10,10 +11,14 @@
 .input_field {
     width: 100%;
     border: 1px solid black;
-    padding: 10px;
+    padding: 25px;
     border-radius: 10px;
 }
 
 .input_container {
     margin-bottom: 25px;
+}
+
+.input_field::placeholder{
+    font-size: 20px;
 }
