--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -3,7 +3,8 @@
 }
 
 .row{
-    height: 100%
+    height: 90%;
+    margin-bottom: 40px;
 }
 
 
@@ -37,7 +38,7 @@
 
 .image_section .main_image {
     width: 100%;
-    height: auto;
+    height: 90%;
     object-fit: contain;
 }
 
@@ -46,10 +47,10 @@
     background-color: #F27A0A;
     color: #041D60;
     border: 0;
-    padding: 10px 20px;
-    font-size: 20px;
-    font-weight: 400;
-    border-radius: 20px;
+    padding: 20px 40px;
+    font-size: 24px;
+    font-weight: 500;
+    border-radius: 30px;
     margin-right: 40px ;
 }
 
@@ -58,7 +59,8 @@
     background-color: transparent;
     font-size: 25px;
     padding: 1px 20px;
-    font-weight: 400;
+    margin-left: 30px;
+    font-weight: 500;
     border: 2px transparent;
     border-radius: 20px 
 }
