--- a/src/pages/OurProgram/OurProgram.css
+++ b/src/pages/OurProgram/OurProgram.css
@@ -40,12 +40,13 @@
 }
 
 .ourprogram_button {
-    margin-top: 30px;
-    padding: 10px 40px;
+    padding: 20px 60px;
     border: 0;
+    border-radius: 10px;
     background-color: #041D60;
     color: white;
-    border-radius: 10px;
+    margin-top: 30px;
+    font-size: 20px;
 }
 
 .ourprgmimageandcontent p {
@@ -104,3 +105,47 @@
     font-weight: bold;
     align-self: center;
 }
+
+.testimonial_wrapper {
+    width: 100%;
+    height: 500px; /* Adjust based on your design */
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .testimonial_container {
+    display: flex;
+    flex-direction: column;
+    animation: tileScroll 10s linear infinite;
+  }
+  
+  @keyframes tileScroll {
+    0% {
+      transform: translateY(100%);
+    }
+    100% {
+      transform: translateY(-100%);
+    }
+  }
+  
+  /* Pause scrolling when hovered */
+  .testimonial_container:hover {
+    animation-play-state: paused;
+  }
+  
+  .testimonial_card {
+    width: 300px; /* Adjust width */
+    height: 100px; /* Adjust height */
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  
+  
