--- a/src/pages/OurProgram/components/Testimonial/Testimonial.css
+++ b/src/pages/OurProgram/components/Testimonial/Testimonial.css
@@ -1,12 +1,13 @@
 .testimonial_wrapper {
     width: 100%;
-    height: 300px; /* Adjust height as needed */
+    height: auto; /* Adjust height as needed */
     overflow: hidden;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 10px;
   }
   
   .testimonial_container {
@@ -19,6 +20,9 @@
     display: flex;
     justify-content: center;
     gap: 20px;
+    margin-right: 20px;
+    flex-wrap: wrap;
+    
     animation: lineScroll 3s ease-in-out infinite; /* Controls each row's movement */
   }
   
@@ -49,11 +53,12 @@
     height: 100px; /* Adjust height */
     background: #fff;
     border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
     text-align: center;
+    
   }
   
