--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -14,6 +14,7 @@ h5{
 .about_title{
     color:#F27A0A;
     padding: 30px 0px 0px 30px;
+    margin-left: 80px;
 }
 
 
@@ -72,5 +73,6 @@ h3{
     }
     .about_title{
         font-size: 32px;
+        margin-left: 0;
     }
 }
