--- a/src/pages/OurProgram/OurProgram.css
+++ b/src/pages/OurProgram/OurProgram.css
@@ -48,6 +48,11 @@
     margin-top: 30px;
     font-size: 20px;
 }
+.ourprogram_button:hover{
+    border: 1px solid #041D60;
+    background-color: white;
+    transition: all 0.2s;
+}
 
 .ourprgmimageandcontent p {
     margin: 100px;
