--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -37,9 +37,9 @@
 }
 
 .image_section .main_image {
-    width: 100%;
-    height: 90%;
-    object-fit: contain;
+    /* width: 100%;
+    height: 90%; */
+    object-fit: cover;
 }
 
 
