--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -1,7 +1,7 @@
-/* .about{
-    margin-top: 180px;
-    margin-left: 80px;
-} */
+.about{
+    padding-top: 120px;
+
+}
 h5{
     font-size: 48px;
     margin-bottom: 30px;
