--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -3,6 +3,10 @@
     color: #F27A0A
 }
 
+.contact_container{
+    padding-top: 120px;
+}
+
 .form_tab, .accordions_tab{
     padding: 0 50px;
     margin-bottom: 30px;
