--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -1,5 +1,5 @@
 .hero_section{
-    height: auto;
+    padding-top: 120px;
 }
 
 .row{
@@ -47,9 +47,9 @@
     background-color: #F27A0A;
     color: #041D60;
     border: 0;
-    padding: 20px 40px;
-    font-size: 24px;
-    font-weight: 500;
+    padding: 15px 40px;
+    font-size: 18px;
+    font-weight: 450;
     border-radius: 30px;
     margin-right: 40px ;
 }
