--- a/src/pages/OurProgram/OurProgram.css
+++ b/src/pages/OurProgram/OurProgram.css
@@ -1,5 +1,5 @@
-.ourprgm {
-    margin-left: 30px;
+.ourprogram {
+    padding-top: 120px;
 }
 
 .ourprogram_title {
@@ -46,7 +46,7 @@
     background-color: #041D60;
     color: white;
     margin-top: 30px;
-    font-size: 20px;
+    font-size: 24px;
 }
 .ourprogram_button:hover{
     border: 1px solid #041D60;
