--- a/src/pages/OurProgram/components/BroadCard/BroadCard.css
+++ b/src/pages/OurProgram/components/BroadCard/BroadCard.css
@@ -13,10 +13,11 @@
 
 .broad_title{
     margin-bottom: 30px;
-    color: #F27A0A
+    color: #F27A0A;
+    font-size: 30px;
 }
 
 .broad_content{
-    font-size: 20px;
+    font-size: 24px;
     color: #041D60
 }
