Home Page font Reduced

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -60,7 +60,7 @@
 @media (max-width: 768px) {
     .NavTitle{
         font-size: 36px;
-        margin-left: 25px;
+        margin-top: 50px;
     }
     .Title {
         font-size: 40px;
