--- a/src/pages/Home/components/CrossCards/CrossCards.css
+++ b/src/pages/Home/components/CrossCards/CrossCards.css
@@ -80,3 +80,11 @@
     border-radius: 20px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+@media (max-width: 768px){
+    h3{
+        font-size: 24px;
+    }
+    #Elite{
+        font-size: 20px;
+    }
+}
