--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,6 +1,6 @@
 .contact_title {
     margin-left: 100px;
-    color: #F27A0A
+    color: #F27A0A;
 }
 
 .contact_container{
@@ -20,7 +20,6 @@
     .contact_title{
         margin-left: 40px;
     }
-
 }
 
 
