--- a/src/pages/Contact/components/Input/Input.css
+++ b/src/pages/Contact/components/Input/Input.css
@@ -22,3 +22,8 @@
 .input_field::placeholder{
     font-size: 20px;
 }
+@media (max-width: 768px) {
+    .label {
+        font-size: 18px;
+    }
+}
