--- a/src/pages/OurProgram/components/Testimonial/Testimonial.css
+++ b/src/pages/OurProgram/components/Testimonial/Testimonial.css
@@ -14,6 +14,8 @@
     display: flex;
     flex-direction: column;
     gap: 10px; /* Adjust the spacing */
+    height: auto;
+    max-height: 400px;
   }
   
   .testimonial_row {
