--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -6,7 +6,12 @@
     height: 90%;
     margin-bottom: 40px;
 }
-
+.explore_us{
+    border: 1px solid #041D60 !important;
+    color: #041D60 !important;
+    align-items: center;
+    justify-content: center;
+}
 
 
 .hero_content{
@@ -43,23 +48,30 @@
 }
 
 
-.hero_buttons .book_button {
+.book_button {
     background-color: #F27A0A;
     color: #041D60;
     border: 0;
-    padding: 15px 40px;
+    padding: 20px 40px;
     font-size: 18px;
     font-weight: 450;
     border-radius: 30px;
     margin-right: 40px ;
+    align-items: center;
+    justify-content: center;
 }
 
-.hero_buttons .explore_us{
+.explore_us{
     color:#041D60;
+    display: flex;
+    height: 80px;
+    width: calc(100% - 70%);
+    align-items: center;
+    justify-content: center;
     background-color: transparent;
     font-size: 25px;
-    padding: 1px 20px;
-    margin-left: 30px;
+    padding: 10px 20px !important;
+    /* margin-left: 30px; */
     font-weight: 500;
     border: 2px transparent;
     border-radius: 20px 
@@ -90,25 +102,29 @@
         font-weight:500;
         color: #041D60;
     }
-
-    .hero_buttons .book_button {
+.book_button {
         background-color: #F27A0A;
         color: #041D60;
         border: 0;
-        padding: 10px 20px  !important;
+        padding: 5px 10px  !important;
         font-size: 14px !important;
         font-weight: 500;
         border-radius: 30px;
         margin: 0 !important;
+        height: 50px;
     }
 
-    .hero_buttons .explore_us{
+ .explore_us{
         color:#041D60;
+        height: 50px;
         background-color: transparent;
-        font-size:18px;
-        padding: 10px 20px  !important;
+        font-size:14px;
+        padding: 5px 10px  !important;
         font-weight: 500;
         border: 2px transparent;
-        border-radius: 30px 
+        border-radius: 30px;
+        margin-top: 0 !important;
+        width: 105px;
+        
     }
 }
