--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -73,7 +73,7 @@
     padding: 10px 20px !important;
     /* margin-left: 30px; */
     font-weight: 500;
-    border: 2px transparent;
+    border: 2px transparent !important;
     border-radius: 20px 
 }
 
