--- a/src/pages/OurProgram/OurProgram.css
+++ b/src/pages/OurProgram/OurProgram.css
@@ -1,5 +1,6 @@
 .ourprogram {
     padding-top: 120px;
+    background-color: #e6e6fa
 }
 
 .ourprogram_title {
@@ -153,6 +154,27 @@
     justify-content: center;
     align-items: center;
   }
+
+
   
   
-  
+  .grade_card:hover .card-img {
+    filter: brightness(50%);
+    transition: filter 0.3s ease-in-out;
+  }
+
+  .grade_card{
+    border: 0px;
+  }
+
+  /* Initially hide text overlay */
+  .overlay-text {
+    opacity: 0;
+    line-height: 40px;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  /* Show text on hover */
+  .grade_card:hover .overlay-text {
+    opacity: 1;
+  }
