--- a/src/pages/OurProgram/components/Testimonial/Testimonial.css
+++ b/src/pages/OurProgram/components/Testimonial/Testimonial.css
@@ -52,7 +52,7 @@
   
   .testimonial_card {
     width: 300px; /* Adjust width */
-    height: 100px; /* Adjust height */
+    height: auto; /* Adjust height */
     background: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
