--- a/src/pages/OurProgram/components/Card/Card.css
+++ b/src/pages/OurProgram/components/Card/Card.css
@@ -20,11 +20,14 @@
     width: 150px;
     margin-top: 15px;
     font-weight: bold;
+    transition: ease-in-out 0.2s;
+    border: 2px solid #041D60;
+
 }
 
 .sub_Card a:hover {
     background-color: #ffffff;
-    color: #041D60;
+    color: #041D60 !important;
     border: 2px solid #041D60;
     font-weight: bold;
     border-radius: 5px;
@@ -32,11 +35,16 @@
     width: 150px;
     margin-top: 15px;
     text-decoration: none;
-    transition: ease-in-out 0.2s;
 }
 
 @media (max-width: 768px) {
     .sub_Card{
         margin: 15px;
     }
+}
+
+.sub_button{
+    text-align: center;
+    background-color: #041D60;
+    color: white;;
 }
