--- a/src/pages/OurProgram/OurProgram.css
+++ b/src/pages/OurProgram/OurProgram.css
@@ -18,9 +18,10 @@
 .ourprogram_img {
     width: 100%;
     height: auto;
-    object-fit: contain;
+    object-fit: co;
     padding: 50px;
-    border: 0;
+    border: 0 20px 20px 0 !important;
+    border-radius: 0px 165px 0px 165px !important;
 }
 
 .grade_title{
@@ -50,9 +51,10 @@
     font-size: 24px;
 }
 .ourprogram_button:hover{
-    border: 1px solid #041D60;
-    background-color: white;
+    border: 2px solid #041D60;
+    /* background-color: white; */
     transition: all 0.2s;
+    color: #041D60 !important;
 }
 
 .ourprgmimageandcontent p {
