--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -1,6 +1,8 @@
 .hero_section{
     padding-top: 120px;
-    /* background-color: #e6e6fa; */
+    background-color:#e1d6cb74;
+    padding-bottom: 50px;
+
 }
 
 .row{
@@ -43,8 +45,8 @@
 }
 
 .image_section .main_image {
-    /* width: 100%;
-    height: 90%; */
+    width: 100%;
+    height: 80%;
     object-fit: cover;
 }
 
