--- a/src/pages/AboutUs/components/Card/Card.css
+++ b/src/pages/AboutUs/components/Card/Card.css
@@ -1,6 +1,6 @@
 .about_us_card .card-body {
     width: 100%;
-    height: 400px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,7 +10,7 @@
 .about_us_card {
     width: 80%;
     max-width: 450px;
-    padding: 30px;
+    padding: 0;
     margin: 20px;
     border-radius: 60px;
     border: 1px solid #ccc;
@@ -22,13 +22,13 @@
 }
 
 .card_content h3 {
-    font-size: 30px;
+    font-size: 26px;
     font-weight: 700;
     color: #F27A0A
 }
 
 .card_paragraph h6{
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 500;
     color: #041D60
 }
@@ -37,7 +37,7 @@
 
     .about_us_card .card-body {
         width: 100%;
-        height: 300px;
+        height: 250px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -45,14 +45,14 @@
     }
 
     .card_content h3 {
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 700;
         color: #F27A0A;
-        margin-bottom: 0;
+        margin-bottom: 10px;
     }
 
     .card_paragraph h6{
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 500;
         color: #041D60
     }
