--- a/src/pages/OurProgram/components/Card/Card.css
+++ b/src/pages/OurProgram/components/Card/Card.css
@@ -1,6 +1,7 @@
 .sub_Card {
     width: 300px;
-    height: 370px;
+    height: 300px;
+    padding: 10px 0;
     margin: 30px;
     box-shadow: 0px 0px 20px 3px rgba(0, 0, 0, 0.5);
     transition: ease-in-out 0.2s;
