--- a/src/pages/AboutUs/components/CircularCard/CircularCard.css
+++ b/src/pages/AboutUs/components/CircularCard/CircularCard.css
@@ -38,6 +38,7 @@
     height: 100%;
     width: 100%;
     display: flex;
+    z-index: 0;
     justify-content: center;
     align-items: center;
 }
@@ -66,7 +67,7 @@
     font-size: 16px;
     text-align: center;
     width: 90%;
-    height: 60px; 
+    height: 100px; 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -74,4 +75,5 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip:"text";
+    z-index: 10;
 }
