--- a/src/pages/AboutUs/components/Card/Card.css
+++ b/src/pages/AboutUs/components/Card/Card.css
@@ -1,12 +1,15 @@
 .about_us_card .card-body {
     width: 100%;
-    height: 300px;
+    height: 250px;
+    margin-top: -20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-
+.card_img_section{
+    padding-top: 10px;
+}
 .about_us_card {
     width: 80%;
     max-width: 450px;
@@ -22,13 +25,15 @@
 }
 
 .card_content h3 {
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 700;
+    margin-top: -10px;
     color: #F27A0A
 }
 
 .card_paragraph h6{
-    font-size: 20px;
+    font-size: 17px;
+    margin-top: -10px;
     font-weight: 500;
     color: #041D60
 }
