--- a/src/pages/Home/components/CrossCards/CrossCards.css
+++ b/src/pages/Home/components/CrossCards/CrossCards.css
@@ -72,8 +72,8 @@
 }
 
 .crosscard_img{
-    height: auto;
-    width: 50px;
+    height: 80px;
+    width: 80px;
     object-fit: contain;
     margin-bottom: 30px;
 }
