--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -98,47 +98,97 @@
     transition: all 0.25s;
 } */
 
-@media (max-width: 768px) {
-    .hero_content{
-        margin: 50px 10px;
-        padding-left: 30px !important;
-    }
+/* ======== Media Queries for All Devices ======== */
 
-    .hero_content h1{
-        font-size: 40px !important;
-        margin-bottom: 30px;
-        color: #F27A0A;
-        font-weight: 700;
+/* Large Desktops (1200px and above) */
+@media (min-width: 1200px) {
+    .hero_content {
+      padding-left: 100px;
     }
-
-    .hero_content h4{
-        font-size: 24px !important;
-        font-weight:500;
-        color: #041D60;
+  
+    .hero_content h1 {
+      font-size: 80px;
     }
-.book_button {
-        background-color: #F27A0A;
-        color: #041D60;
-        border: 0;
-        padding: 5px 10px  !important;
-        font-size: 14px !important;
-        font-weight: 500;
-        border-radius: 30px;
-        margin: 0 !important;
-        height: 50px;
+  
+    .hero_content h4 {
+      font-size: 36px;
     }
-
- .explore_us{
-        color:#041D60 !important;
-        height: 50px;
-        background-color: transparent;
-        font-size:14px;
-        padding: 5px 10px  !important;
-        font-weight: 500;
-        border: 2px solid #041D60 !important;
-        border-radius: 30px;
-        margin-top: 0 !important;
-        width: 105px;
-        
+  
+    .carousel img {
+      width: 70%;
+      height: 70%;
     }
+  }
+  
+  /* Laptops & Tablets (992px - 1199px) */
+  @media (max-width: 1199px) {
+    .hero_content {
+      padding-left: 60px;
+    }
+   .book_button{
+    margin-right: 10px;
+   }
+    .hero_content h1 {
+      font-size: 65px;
+    }
+  
+    .hero_content h4 {
+      font-size: 30px;
+    }
+  
+    .book_button,
+    .explore_us {
+      font-size: 18px;
+      padding: 16px 32px;
+    }
+  
+    .carousel img {
+      width: 65%;
+      height: 65%;
+    }
+  }
+  
+  /* Tablets (768px - 991px) */
+  @media (max-width: 991px) {
+    .hero_section {
+      height: auto;
+      padding: 40px 20px;
+    }
+    .book_button{
+        margin-right: 10px;
+       }
+  
+    .row {
+      flex-direction: column;
+      height: auto;
+      margin-bottom: 0;
+    }
+  
+    .hero_content {
+      padding-left: 0;
+      text-align: center;
+    }
+  
+    .hero_content h1 {
+      font-size: 50px;
+      margin-bottom: 30px;
+    }
+  
+    .hero_content h4 {
+      font-size: 20px;
+    }
+  
+    .hero_buttons {
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+  
+    .book_button,
+    .explore_us {
+      width: 60%;
+      text-align: center;
+    }
+  
+  
 }
