--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,7 +6,10 @@
 
 
 .para {
-
+    text-wrap: pretty;
+    width: 70%;
+    margin-bottom: 20px;
+    line-height: 40px;
 }
 
 .Title {
@@ -63,6 +66,17 @@
         margin-top: 50px;
     }
     .Title {
-        font-size: 40px;
+        font-size: 30px;
+    }
+    .para{
+        font-size: 16px;
+       text-align: center;
+       width: 70%;
+       margin-bottom: 0;
+       line-height: normal;
+       
+    }
+    .content {
+        margin-bottom: 10px;
     }
 }
