--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -5,7 +5,7 @@
 }
 
 .left_line, .right_line {
-    height: 1px;
+    height: 2px;
     width: 100%;
     background-color: black;
 }
@@ -16,6 +16,7 @@
     -webkit-background-clip: text; 
     -webkit-text-fill-color: transparent;
     margin: 0;
+    font-size: 34px;
 }
 
 .tab_contents{
