--- a/src/pages/AboutUs/components/Card/Card.css
+++ b/src/pages/AboutUs/components/Card/Card.css
@@ -1,4 +1,4 @@
-.about_us_card .card-body {
+.about_us_card .card-body-1 {
     width: 100%;
     height: 250px;
     margin-top: -20px;
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px;
 }
 .card_img_section{
     padding-top: 10px;
