--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -10,31 +10,19 @@
 
 }
 
-.form_tab{
-    padding: 0 50px;
-    margin-bottom: 30px;
-    height: 700px !important;
-}
-.accordions_tab{
+.form_tab, .accordions_tab{
     padding: 0 50px;
     margin-bottom: 30px;
 }
 .faq_section{
-    margin-top: 0px;
+    margin-top: -120px;
     padding-bottom: 30px;
 }
 
 @media (max-width: 768px) {
-    .form_tab{
+    .form_tab, .accordions_tab{
         padding: 0 25px;
         margin-bottom: 30px;
-        height: 630px !important;
-    }
-    .accordions_tab{
-        padding: 0 25px;
-        margin-bottom: 30px;
-        height: 950px !important;
-        margin-bottom: 0;
     }
     .contact_title{
         margin-left: 40px;
