--- a/src/pages/OurProgram/components/Card/Card.css
+++ b/src/pages/OurProgram/components/Card/Card.css
@@ -5,6 +5,7 @@
     margin: 20px 30px 30px 30px;
     box-shadow: 0px 0px 20px 3px rgba(0, 0, 0, 0.5);
     transition: ease-in-out 0.2s;
+    
 
 }
 
@@ -45,6 +46,7 @@
 @media (max-width: 768px) {
     .sub_Card{
         margin: 15px;
+        margin-top: 70px;
     }
 }
 
