--- a/src/pages/AboutUs/components/Tab/Tab.css
+++ b/src/pages/AboutUs/components/Tab/Tab.css
@@ -2,13 +2,16 @@
 
 .title_tag{
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .left_line, .right_line {
     height: 2px;
-    width: 100%;
+    width: 95%;
     background-color: #041D60;
-    margin-left: 15px;
 }
 
 .title_tag h2{
@@ -17,8 +20,10 @@
     -webkit-background-clip: text; 
     -webkit-text-fill-color: transparent;
     margin: 0;
+    padding: 0;
     font-size: 34px;
 }
+
 
 .tab_contents{
     padding:  0px 30px 0px 30px;
@@ -59,6 +64,8 @@
     color:#041D60
 }
 
+
+
 @media (max-width: 768px) {
     .tab_contents{
         padding: 30px;
@@ -76,13 +83,25 @@
         text-align: justify !important;
         line-height: 35px;
         font-weight: 400;
-        font-size: 24px;
+        font-size: 20px !important;
         color:#041D60;
     }
 
     .tab_container{
         padding: 10px
     }
+
+    .title_tag h2{
+        text-align: center;
+        background: linear-gradient(30deg,#F27A0A, #041D60);
+        -webkit-background-clip: text; 
+        -webkit-text-fill-color: transparent;
+        margin: 0;
+        font-size: 20px;
+    }
+
+
+
     .tab_content_paragraph{
         font-size: 20px;
         font-weight: 400;
@@ -94,3 +113,20 @@
     }
 
 }
+
+.tab_title {
+    font-size: 1.2rem; 
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+    max-width: 100%; 
+    display: block; 
+  }
+  
+  @media (max-width: 768px) {
+    .tab_title {
+      font-size: 1rem; 
+      margin: 0 15px
+    }
+  }
+  
