--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -69,7 +69,9 @@
     .para{
         font-size: 16px;
        text-align: center;
-       width: 70%;
+       width: 90%;
+       min-width: 90%;
+       max-width: 100%;
        margin-bottom: 0;
        line-height: normal;
        
