--- a/src/pages/components/Navbar/Navbar.css
+++ b/src/pages/components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .navbar-brand{
     font-size: 20px;
     font-weight: 500;
+    
 }
 
 .navbar-img{
@@ -37,6 +38,7 @@
     -webkit-text-fill-color: transparent;
     background-clip:"text";
     margin: 0px 10px;
+    cursor: pointer;
 }
 
 .navbar-brand img {
