--- a/src/pages/AboutUs/components/Card/Card.css
+++ b/src/pages/AboutUs/components/Card/Card.css
@@ -14,7 +14,7 @@
 .about_us_card {
     width: 80%;
     max-width: 450px;
-    padding: 0;
+    padding: 10px;
     margin: 20px;
     border-radius: 60px;
     border: 1px solid #ccc;
@@ -63,4 +63,8 @@
         font-weight: 500;
         color: #041D60
     }
+}
+#whycard:hover{
+    transform: scale(1.1);
+    transition: 0.2s all ease-in;
 }
