--- a/src/pages/AboutUs/components/CircularCard/CircularCard.css
+++ b/src/pages/AboutUs/components/CircularCard/CircularCard.css
@@ -6,14 +6,14 @@
     min-height: 400px; 
     width: 100%;
     text-align: center;
-    padding: 10px 0;
+    padding: 10px 0px;
 }
 
 .circular_card_container h3 {
     font-size: 24px;
     font-weight: 600;
     text-align: center;
-    height: 50px; 
+    height: 60px; 
     display: flex;
     align-items: center;
     justify-content: center;
