--- a/src/pages/OurProgram/OurProgram.css
+++ b/src/pages/OurProgram/OurProgram.css
@@ -125,6 +125,10 @@
     min-width: 400px;
     max-width: 450px;
   }
+
+  .testimonial-wrapper {
+    animation: scrollUp 100s linear infinite;
+  }
 }
 
 .c1 {
