--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -4,47 +4,52 @@
     margin-top: 10px;
 }
 
-.contact_container{
-    padding-top: 40px;
+.contact_container {
+    padding-top: 20px;
     margin-top: 20px;
-
 }
 
 .accordions_tab {
     transition: all 3s ease-in-out;
 }
 
-.form_tab, .accordions_tab{
+.form_tab,
+.accordions_tab {
     padding: 0 50px;
     margin-bottom: 30px;
 }
-.faq_section{
+
+.faq_section {
     margin-top: -120px;
     padding-bottom: 30px;
 }
 
 @media (max-width: 768px) {
-    .form_tab, .accordions_tab{
+
+    .form_tab,
+    .accordions_tab {
         padding: 0 10px;
         margin-bottom: 30px;
     }
-    .contact_title{
+
+    .contact_title {
         margin-left: 40px;
     }
 }
 
-.privacy_btn{
-    color:#041D60 !important;
+.privacy_btn {
+    color: #041D60 !important;
     font-size: 20px;
-margin-right: 10px;
+    margin-right: 10px;
 }
 
-.terms_btn{
-    color:#041D60 !important;
+.terms_btn {
+    color: #041D60 !important;
     font-size: 20px;
-margin-right: 10px;
+    margin-right: 10px;
 }
-.form_button{
+
+.form_button {
     padding: 20px 60px;
     border: 0;
     border-radius: 10px;
@@ -52,4 +57,10 @@ margin-right: 10px;
     color: white;
     margin-top: 20px;
     font-size: 20px;
+}
+
+.form_button:hover{
+    background-color: white;
+    color: #041D60;
+    border: 2px solid #041D60;
 }
