--- a/src/pages/AboutUs/components/Card/Card.css
+++ b/src/pages/AboutUs/components/Card/Card.css
@@ -68,3 +68,47 @@
     transform: scale(1.1);
     transition: 0.2s all ease-in;
 }
+@media (max-width: 344px) {
+    .about_us_card {
+        width: 95%;
+        max-width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 8px;
+    }
+
+    .about_us_card .card-body-1 {
+        height: 200px;
+        padding: 10px;
+    }
+
+    .card_content h3 {
+        font-size: 16px;
+    }
+
+    .card_paragraph h6 {
+        font-size: 11px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .about_us_card {
+        width: 90%;
+        max-width: 420px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .about_us_card .card-body-1 {
+        height: 300px;
+        padding: 18px;
+    }
+
+    .card_content h3 {
+        font-size: 22px;
+    }
+
+    .card_paragraph h6 {
+        font-size: 16px;
+    }
+}
