--- a/src/pages/Home/components/CrossCards/CrossCards.css
+++ b/src/pages/Home/components/CrossCards/CrossCards.css
@@ -93,6 +93,10 @@
     border-radius: 20px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+.px-cus{
+    padding-left: 10px;
+    padding-right: 10px;
+}
 @media (max-width: 768px){
     h3{
         font-size: 24px;
