--- a/src/pages/OurProgram/components/BroadCard/BroadCard.css
+++ b/src/pages/OurProgram/components/BroadCard/BroadCard.css
@@ -1,10 +1,11 @@
-.broad_card{
+/* Default styles for larger screens */
+.broad_card {
     margin: 20px;
     width: 80%;
     height: 240px;
 }
 
-.card_img{
+.card_img {
     height: 150px;
     width: 150px;
     object-fit: contain;
@@ -12,33 +13,265 @@
     align-items: center;
 }
 
-.broad_title{
+.broad_title {
     margin-bottom: 30px;
     color: #F27A0A;
     font-size: 36px;
 }
 
-.broad_content{
+.broad_content {
     font-size: 24px;
-    color: #041D60
+    color: #041D60;
 }
-@media screen and (max-width: 768px){
-    .broad_card{
-        width: 85%;
-        padding: 10px;
-        height: auto;
+
+@media screen and (max-width:384px) {
+    .card_img{
+        height: 100%;
+        width: 100%;
+        border: 1px solid black;
+    }
+    
+    
+}
+@media screen and (min-width: 430px) and (max-width: 767px) {
+    .broad_card {
+        width: 95%;
+        padding: 8px;
+        height: 280px;
+        flex-direction: column;
         justify-content: center;
     }
-    .broad_title{
-        font-size: 24px;
+
+    .broad_title {
+        font-size: 26px;
+        margin-top: 20px;
+    }
+
+    .broad_content {
+        font-size: 20px;
+    }
+
+    .card_img {
+        height: 90px;
+        width: 90px;
+        margin: 20px;
+    }
+}
+
+
+
+
+@media screen and(max-width:600px) {
+    .broad_card{
+        height: 70%;
+        width: 80%;
     }
     .broad_content{
-        font-size: 18px;
-        text-align: center;
-       
+        width: auto;
+        height: auto;
     }
-    .card_img{
+}
+/* Media query for screens smaller than 768px */
+@media screen and (max-width: 800px) {
+    .broad_card {
+        width: 85%;
+        padding: 10px;
+        height: 200px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .broad_title {
+        font-size: 30px;
+        text-align: center;
+        margin-top: 25px;
+    }
+
+    .broad_content {
+        font-size: 22px;
+        text-align: center;
+    }
+
+    .card_img {
         height: 100px;
         width: 100px;
+        margin: 35px;
+    }
+}
+@media screen and (min-width: 975px) {
+    .broad_card {
+        width: 85%;
+        padding: 10px;
+        height: 200px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .broad_title {
+        font-size: 30px;
+        text-align: center;
+        margin-top: 25px;
+    }
+
+    .broad_content {
+        font-size: 22px;
+        text-align: center;
+    }
+
+    .card_img {
+        height: 100px;
+        width: 100px;
+        margin: 35px;
+    }
+}
+@media screen and (min-width: 801px) and (max-width: 975px) {
+    .broad_card {
+        width: 85%;
+        padding: 10px;
+        height: 200px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .broad_title {
+        font-size: 30px;
+        text-align: center;
+        margin-top: 25px;
+    }
+
+    .broad_content {
+        font-size: 22px;
+        text-align: center;
+    }
+
+    .card_img {
+        height: 100px;
+        width: 100px;
+        margin: 35px;
+    }
+}
+
+/* Media query for screens smaller than 480px */
+@media screen and (max-width: 480px) {
+    .broad_card {
+        width: 95%;
+        padding: 8px;
+        height: 180px;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .broad_title {
+        font-size: 26px;
+        margin-top: 20px;
+    }
+
+    .broad_content {
+        font-size: 20px;
+    }
+
+    .card_img {
+        height: 90px;
+        width: 90px;
+        margin: 20px;
+    }
+}
+@media screen and (max-width: 430px) {
+    .broad_card {
+        width: 90%;
+        height: 250px;
+        padding: 5px;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .ourprogram_content{
+        width: 380px;
+        margin-top: 0px;
+    }
+    .ourprogram_button{
+        margin-top: 10px;
+    }
+    .title_tag{
+        margin-top: 0px;
+        margin-bottom: 10px;
+    }
+
+    .broad_title {
+        font-size: 24px;
+        margin-top: 15px;
+        text-align: center;
+    }
+
+    .broad_content {
+        font-size: 18px;
+        text-align: center;
+    }
+
+    .card_img {
+        height: 80px;
+        width: 80px;
+        margin: 20px;
+    }
+}
+
+@media screen and (max-width: 412px) {
+    .broad_card {
+        width: 90%;
+        height: 250px;
+        padding: 5px;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .ourprogram_content{
+        width: 380px;
+        margin-top: 0px;
+    }
+    .ourprogram_button{
+        margin-top: 10px;
+    }
+    .title_tag{
+        margin-top: 0px;
+        margin-bottom: 10px;
+    }
+
+    .broad_title {
+        font-size: 24px;
+        margin-top: 15px;
+        text-align: center;
+    }
+
+    .broad_content {
+        font-size: 18px;
+        text-align: center;
+    }
+
+    .card_img {
+        height: 80px;
+        width: 80px;
+        margin: 20px;
+    }
+}
+
+/* Media query for screens larger than 1200px */
+@media screen and (min-width: 1200px) {
+    .broad_card {
+        width: 70%;
+        height: 280px;
+    }
+
+    .broad_title {
+        font-size: 40px;
+    }
+
+    .broad_content {
+        font-size: 26px;
+    }
+
+    .card_img {
+        height: 180px;
+        width: 180px;
     }
 }
